--- a/main.kv
+++ b/main.kv
@@ -87,7 +87,7 @@
         fill_color: (1,1,1,1)
         color: 'black'
         text: 'go to odrive control panel'
-        font_size: self.size
+        text_size: self.size
         pos_hint: {'x': root.button_shift, 'bottom': 0.2}
 
 
