--- a/odrive_screen.kv
+++ b/odrive_screen.kv
@@ -8,7 +8,7 @@
         fill_color: (1, 1, 1, 1)
         on_press: root.on_leave()
         halign: 'center'
-        pos_hint: {'x': 0.75+root.button_shift, 'bottom':1 }
+        pos_hint: {'x': root.button_shift, 'bottom':1 }
 
     DPEAButton:
 
@@ -19,7 +19,7 @@
         fill_color: (1, 1, 1, 1)
         on_press: root.turn_forward_5_turns()
         halign: 'center'
-        pos_hint: {'x': 0.75+root.button_shift, 'bottom':1 }
+        pos_hint: {'x': 0.25+root.button_shift, 'bottom':1 }
 
     DPEAButton:
 
@@ -30,7 +30,7 @@
         fill_color: (1, 1, 1, 1)
         on_press: root.turn_backward_5_turns()
         halign: 'center'
-        pos_hint: {'x': 0.75+root.button_shift, 'bottom':1 }
+        pos_hint: {'x': 0.50+root.button_shift, 'bottom':1 }
 
     DPEAButton:
 
