--- a/main.kv
+++ b/main.kv
@@ -88,7 +88,7 @@
         color: 'black'
         text: 'go to odrive control panel'
         text_size: self.size
-        pos_hint: {'x': root.button_shift, 'bottom': 0.2}
+        pos_hint: {'x': root.button_shift, 'y': 0.25}
 
 
 <Slider>:
