--- a/odrive_screen.kv
+++ b/odrive_screen.kv
@@ -50,7 +50,7 @@
         size_hint: (1, 0.1)
         pos_hint: {'top': 1-0.1}
         halign: "center"
-        text: "I'M HAPPY YAY THE BUTTON IS PRESSED" if root.btnPress else "I'M NOT HAPPY PRESS THE BUTTON"
+        text: "I'M NOT HAPPY PRESS THE BUTTON"
 
     Slider:
         id: slider
