--- a/odrive_screen.kv
+++ b/odrive_screen.kv
@@ -45,7 +45,7 @@
 
     DPEAButton:
 
-        id: pot_toggle
+        id: follow_pot_toggle
         text: 'Toggle knob following'
         color: 'black'
         text_size: self.size
